<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:context=".MainScreenFragment">

    <TextView
        android:id="@+id/txtHealthDiary"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:gravity="center"
        android:textSize="32sp"
        android:textColor="@color/green"
        android:background="@color/gray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:text="@string/app_name" />

    <TextView
        android:id="@+id/txtDateTime"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:gravity="center"
        android:textColor="@color/green"
        android:textSize="32sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"

        app:layout_constraintTop_toBottomOf="@+id/txtHealthDiary"
        tools:text="07.03.2022" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnProfile"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:gravity="center"
        android:text="@string/profile"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtDateTime" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnChallenges"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:text="@string/challenges"
        app:layout_constraintBottom_toBottomOf="parent"

        app:layout_constraintStart_toStartOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnLists"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:text="@string/lists"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnPlus"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:background="@color/green"
        android:text="@string/plus"
        app:layout_constraintBottom_toTopOf="@+id/btnLists"
        app:layout_constraintEnd_toStartOf="@+id/btnLists"
        app:layout_constraintStart_toEndOf="@+id/btnChallenges"
        app:layout_constraintTop_toBottomOf="@+id/btnProfile"
        app:layout_constraintVertical_bias="1.0" />

</androidx.constraintlayout.widget.ConstraintLayout>